#50 Open blogs on tumbex.com.
Allows to open blogs on tumbex.com within TumblThrees context menu (of the main blog manager).

--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.resx
@@ -974,4 +974,7 @@ Note: The tumblr api is only used for regular tumblr blog downloads.</value>
 raw - download "_raw" photos if available, or 1280px else (broken!).
 best - download largest size possible (SVC only), or 1280px else.</value>
   </data>
+  <data name="VisitBlogOnTumbex" xml:space="preserve">
+    <value>Open the site in the web browser (on tumbex.com)</value>
+  </data>
 </root>
