--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.fa.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.fa.resx
@@ -704,4 +704,13 @@
     <value>میزبان vt.tumblr.com به طور مرتب اتصا
 	لات را خاتمه می دهد در صورتی که تعداد زیاد باشد.</value>
   </data>
+  <data name="LogLevel" xml:space="preserve">
+    <value>Log Level</value>
+  </data>
+  <data name="ToolTipLogLevel" xml:space="preserve">
+    <value>Specify the log level.</value>
+  </data>
+  <data name="ToolTipLogLevelDescription" xml:space="preserve">
+    <value>Specify the log level (from Error only to Verbose details) or put it Off.</value>
+  </data>
 </root>
