--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.ja.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.ja.resx
@@ -699,4 +699,13 @@ Emptyはブログ全体を意味します。</value>
   <data name="ToolTipVideoConnectionsDescription" xml:space="preserve">
     <value>vt.tumblr.comホストは、番号が高すぎる場合は定期的に接続を閉じます。</value>
   </data>
+  <data name="LogLevel" xml:space="preserve">
+    <value>Log Level</value>
+  </data>
+  <data name="ToolTipLogLevel" xml:space="preserve">
+    <value>Specify the log level.</value>
+  </data>
+  <data name="ToolTipLogLevelDescription" xml:space="preserve">
+    <value>Specify the log level (from Error only to Verbose details) or put it Off.</value>
+  </data>
 </root>
