--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.el.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.el.resx
@@ -710,4 +710,13 @@
   <data name="ToolTipVideoConnectionsDescription" xml:space="preserve">
     <value>Ο κεντρικός υπολογιστής vt.tumblr.com κλείνει τακτικά τις συνδέσεις αν ο αριθμός είναι πολύ υψηλός.</value>
   </data>
+  <data name="LogLevel" xml:space="preserve">
+    <value>Log Level</value>
+  </data>
+  <data name="ToolTipLogLevel" xml:space="preserve">
+    <value>Specify the log level.</value>
+  </data>
+  <data name="ToolTipLogLevelDescription" xml:space="preserve">
+    <value>Specify the log level (from Error only to Verbose details) or put it Off.</value>
+  </data>
 </root>
