--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.es.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.es.resx
@@ -700,4 +700,13 @@ P.ej. gran coche grande, lleva búsquedas de grandes coches grandes y osos.</val
   <data name="ToolTipVideoConnectionsDescription" xml:space="preserve">
     <value>El host vt.tumblr.com cierra regularmente las conexiones si el número es demasiado alto.</value>
   </data>
+  <data name="LogLevel" xml:space="preserve">
+    <value>Log Level</value>
+  </data>
+  <data name="ToolTipLogLevel" xml:space="preserve">
+    <value>Specify the log level.</value>
+  </data>
+  <data name="ToolTipLogLevelDescription" xml:space="preserve">
+    <value>Specify the log level (from Error only to Verbose details) or put it Off.</value>
+  </data>
 </root>
