--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.fi.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.fi.resx
@@ -702,4 +702,13 @@ Esim. suuri iso auto, karhu etsii suuria suuria autoja ja karhuja.</value>
     <value>Vt.tumblr.com-isäntä sulkee säännöllisesti yhteydet,
 jos määrä on liian korkea.</value>
   </data>
+  <data name="LogLevel" xml:space="preserve">
+    <value>Log Level</value>
+  </data>
+  <data name="ToolTipLogLevel" xml:space="preserve">
+    <value>Specify the log level.</value>
+  </data>
+  <data name="ToolTipLogLevelDescription" xml:space="preserve">
+    <value>Specify the log level (from Error only to Verbose details) or put it Off.</value>
+  </data>
 </root>
