--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.fr.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.fr.resx
@@ -703,4 +703,13 @@ Par exemple. grande voiture, les ours recherchent de grandes grosses voitures et
   <data name="ToolTipVideoConnectionsDescription" xml:space="preserve">
     <value>L'hôte vt.tumblr.com ferme régulièrement les connexions si le numéro est trop élevé.</value>
   </data>
+  <data name="LogLevel" xml:space="preserve">
+    <value>Log Level</value>
+  </data>
+  <data name="ToolTipLogLevel" xml:space="preserve">
+    <value>Specify the log level.</value>
+  </data>
+  <data name="ToolTipLogLevelDescription" xml:space="preserve">
+    <value>Specify the log level (from Error only to Verbose details) or put it Off.</value>
+  </data>
 </root>
