--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.he.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.he.resx
@@ -701,4 +701,13 @@
   <data name="ToolTipVideoConnectionsDescription" xml:space="preserve">
     <value>המארח vt.tumblr.com סוגר באופן קבוע את החיבורים אם המספר גבוה מדי.</value>
   </data>
+  <data name="LogLevel" xml:space="preserve">
+    <value>Log Level</value>
+  </data>
+  <data name="ToolTipLogLevel" xml:space="preserve">
+    <value>Specify the log level.</value>
+  </data>
+  <data name="ToolTipLogLevelDescription" xml:space="preserve">
+    <value>Specify the log level (from Error only to Verbose details) or put it Off.</value>
+  </data>
 </root>
