--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.hi.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.hi.resx
@@ -698,4 +698,13 @@
   <data name="ToolTipVideoConnectionsDescription" xml:space="preserve">
     <value>Vt.tumblr.com मेजबान कनेक्शन बंद कर देता है यदि संख्या बहुत अधिक है</value>
   </data>
+  <data name="LogLevel" xml:space="preserve">
+    <value>Log Level</value>
+  </data>
+  <data name="ToolTipLogLevel" xml:space="preserve">
+    <value>Specify the log level.</value>
+  </data>
+  <data name="ToolTipLogLevelDescription" xml:space="preserve">
+    <value>Specify the log level (from Error only to Verbose details) or put it Off.</value>
+  </data>
 </root>
