--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.it.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.it.resx
@@ -706,4 +706,13 @@ fino a quando la richiesta non è disponibile.</value>
     <value>Numero di connessioni simultanee con l'host video tumblr.
 L'host di vt.tumblr.com chiude regolarmente le connessioni se il numero è troppo alto.</value>
   </data>
+  <data name="LogLevel" xml:space="preserve">
+    <value>Log Level</value>
+  </data>
+  <data name="ToolTipLogLevel" xml:space="preserve">
+    <value>Specify the log level.</value>
+  </data>
+  <data name="ToolTipLogLevelDescription" xml:space="preserve">
+    <value>Specify the log level (from Error only to Verbose details) or put it Off.</value>
+  </data>
 </root>
