--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.ko.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.ko.resx
@@ -697,4 +697,13 @@
   <data name="ToolTipVideoConnectionsDescription" xml:space="preserve">
     <value>vt.tumblr.com 호스트는 번호가 너무 높으면 정기적으로 연결을 닫습니다.</value>
   </data>
+  <data name="LogLevel" xml:space="preserve">
+    <value>Log Level</value>
+  </data>
+  <data name="ToolTipLogLevel" xml:space="preserve">
+    <value>Specify the log level.</value>
+  </data>
+  <data name="ToolTipLogLevelDescription" xml:space="preserve">
+    <value>Specify the log level (from Error only to Verbose details) or put it Off.</value>
+  </data>
 </root>
