--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.no.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.no.resx
@@ -701,4 +701,13 @@ F.eks stor stor bil, bjørn søker etter store store biler og bjørner.</value>
   <data name="ToolTipVideoConnectionsDescription" xml:space="preserve">
     <value>Vt.tumblr.com-verten lukker regelmessig tilkoblinger dersom tallet er for høyt.</value>
   </data>
+  <data name="LogLevel" xml:space="preserve">
+    <value>Log Level</value>
+  </data>
+  <data name="ToolTipLogLevel" xml:space="preserve">
+    <value>Specify the log level.</value>
+  </data>
+  <data name="ToolTipLogLevelDescription" xml:space="preserve">
+    <value>Specify the log level (from Error only to Verbose details) or put it Off.</value>
+  </data>
 </root>
