--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.tr.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.tr.resx
@@ -702,4 +702,13 @@ Boş, blogun tamamı anlamına gelir.</value>
   <data name="ToolTipVideoConnections" xml:space="preserve">
     <value>Vt.tumblr.com sunucusu, sayı çok yüksekse düzenli olarak bağlantıları kapatır.</value>
   </data>
+  <data name="LogLevel" xml:space="preserve">
+    <value>Log Level</value>
+  </data>
+  <data name="ToolTipLogLevel" xml:space="preserve">
+    <value>Specify the log level.</value>
+  </data>
+  <data name="ToolTipLogLevelDescription" xml:space="preserve">
+    <value>Specify the log level (from Error only to Verbose details) or put it Off.</value>
+  </data>
 </root>
