--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.vi.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.vi.resx
@@ -701,4 +701,13 @@ Ví dụ. chiếc xe to lớn, tìm kiếm những chiếc xe lớn và gấu.</
   <data name="ToolTipVideoConnectionsDescription" xml:space="preserve">
     <value>Máy chủ vt.tumblr.com thường xuyên đóng kết nối nếu số đó quá cao.</value>
   </data>
+  <data name="LogLevel" xml:space="preserve">
+    <value>Log Level</value>
+  </data>
+  <data name="ToolTipLogLevel" xml:space="preserve">
+    <value>Specify the log level.</value>
+  </data>
+  <data name="ToolTipLogLevelDescription" xml:space="preserve">
+    <value>Specify the log level (from Error only to Verbose details) or put it Off.</value>
+  </data>
 </root>
