Fix download of high resolution images
- Tumblr has disabled the access to raw images in the API back in 2018. Some time ago an expanded maximum image size of 2048x3072 was introduced. But this image data isn't accessible in the blog's normal API json.
- If the indicated image size is bigger than the offered size of 1280x1920 then the server is asked for the image url of the higher image size. The app's image size option "raw" has been removed and replaced by "best" for both download methods (API/SVC).
- It takes another round-trip and additional traffic to get the url of the highest resolution image.

Add possibility of settings upgrades

- If a new setting's value was introduced or an old one removed (e.g. raw), the setting wasn't updated in the already existing config.
- It's now possible to define a one time change of a setting value.

--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.resx
@@ -971,8 +971,7 @@ Note: The tumblr api is only used for regular tumblr blog downloads.</value>
   <data name="ToolTipImageSizeDescription" xml:space="preserve">
     <value>Photo size to download in pixels.
 
-raw - download "_raw" photos if available, or 1280px else (broken!).
-best - download largest size possible (SVC only), or 1280px else.</value>
+best - download largest size possible (SVC, API only newer blogs), or 1280px else.</value>
   </data>
   <data name="VisitBlogOnTumbex" xml:space="preserve">
     <value>Open the site in the web browser (on tumbex.com)</value>
