Add issue #56/#104 Save photo sets with similar filenames
- Since Tumblr introduced a new file naming scheme, which gives each file a unique guid, the images of one post are no longer side by side like before. Old files and blogs still have those old filenames starting with "tumblr_" which have a "group part" for photo sets.
- There is a new option "group photo sets" in the settings. If a blog has this option enabled and a normal/reblogged post with a photo set that has new style filenames, the files are renamed.
- When updating an old backup with the options "force rescan" and "group photo sets" enabled, already downloaded files with new style filenames are renamed.

--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.resx
@@ -1010,4 +1010,15 @@ A too small value reduces the crawl speed.
 Specify a number/time pair.
 Note: The Tumblr API is only used for regular Tumblr-Blog downloads.</value>
   </data>
+  <data name="ToolTipGroupPhotoSets" xml:space="preserve">
+    <value>Group photo sets together</value>
+  </data>
+  <data name="ToolTipGroupPhotoSetsDescription" xml:space="preserve">
+    <value>Group photo sets together by using similar filenames (sets with names like tumblr_* are not adjusted). Already downloaded photos are only renamed, if this option is set and a rescan is done.
+
+template: {Post Id}_{Photo Index}_{Original Filename}</value>
+  </data>
+  <data name="GroupPhotoSets" xml:space="preserve">
+    <value>Group photo sets</value>
+  </data>
 </root>
