Add issue #121 Option "Download url list" renamed
- Without reading the tooltip the option text "Download url list" doesn't make clear that no binary files will be downloaded.
- Changed the option text to "Save url list (no audio/image/video downloads)" to make it more clear.

--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.resx
@@ -1021,4 +1021,7 @@ template: {Post Id}_{Photo Index}_{Original Filename}</value>
   <data name="GroupPhotoSets" xml:space="preserve">
     <value>Group photo sets</value>
   </data>
+  <data name="DownloadUrlList2" xml:space="preserve">
+    <value>Save url list (no audio/image/video downloads)</value>
+  </data>
 </root>
