Add issue #18 File rename functionality
- Users wished to be able to save the downloaded files with a different naming scheme than by the original filename.
- The user can specify a filename template in the settings and also change it per blog. Different (case-insensitive) tokens can be specified that are replaced by the corresponding information when the crawler generates a filename for a media file to download. The internal database of already downloaded urls (filenames) is retained, the downloader gets the already generated filename.
- If an non-unique filename template is chosen then files can get overwritten if same filename is generated for different downloaded urls.

--- a/src/TumblThree/TumblThree.Applications/Properties/Resources.resx
+++ b/src/TumblThree/TumblThree.Applications/Properties/Resources.resx
@@ -368,4 +368,10 @@
   <data name="VideoSource" xml:space="preserve">
     <value>Video source: {0}</value>
   </data>
+  <data name="Warning" xml:space="preserve">
+    <value>Warning</value>
+  </data>
+  <data name="FilenameTemplateTokenNotFound" xml:space="preserve">
+    <value>Your filename template does not contain any necessary token!</value>
+  </data>
 </root>
