--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.resx
@@ -1024,4 +1024,25 @@ template: {Post Id}_{Photo Index}_{Original Filename}</value>
   <data name="DownloadUrlList2" xml:space="preserve">
     <value>Save url list (no audio/image/video downloads)</value>
   </data>
+  <data name="FilenameTemplate" xml:space="preserve">
+    <value>Filename template:</value>
+  </data>
+  <data name="ToolTipFilenameTemplate" xml:space="preserve">
+    <value>Specify a filename template for saving the downloaded files.</value>
+  </data>
+  <data name="ToolTipFilenameTemplateDescription" xml:space="preserve">
+    <value>The following tokens can be used in the filename template:
+  %f   original filename (default)
+  %d  post date (yyyymmdd)
+  %p  post title
+  %i   post id
+  %n  image index (of photo sets, else skipped)
+  %t   for all tags (cute+cats,big+dogs)
+  %r   for reblog
+  %s   slug (last part of a post's url)
+Example (saving an image):
+  %i_%f for {post id}_{tumblr filename}.jpg
+If additionally the option "group photo sets" is enabled, then for image sets the token %i is replaced by {post id}_{image index} or, if the token isn't used, the images sets are saved as {post id}_{image index}_{filename template}.
+Put the option off if you want to use your own template for photo sets.</value>
+  </data>
 </root>
