Add issue #18 File rename functionality (2)
- Users wished to be able to save the downloaded files with a different naming scheme than by the original filename.
- The user can specify a filename template in the settings and also change it per blog. Different (case-insensitive) tokens can be specified that are replaced by the corresponding information when the crawler generates a filename for a media file to download.
- To prevent overwriting of files if the filename template isn't generating unique enough filenames, the internal database of already downloaded urls (filenames) has been adjusted to also store the renamed filenames and a number is added to the filename where necessary to make it unique. The downloader gets the already generated filename.

--- a/src/TumblThree/TumblThree.Applications/Properties/Resources.resx
+++ b/src/TumblThree/TumblThree.Applications/Properties/Resources.resx
@@ -372,6 +372,9 @@
     <value>Warning</value>
   </data>
   <data name="FilenameTemplateTokenNotFound" xml:space="preserve">
-    <value>Your filename template does not contain any necessary token!</value>
+    <value>Filename template does not contain any necessary token!</value>
+  </data>
+  <data name="FilenameTemplateAppendTokenNotFound" xml:space="preserve">
+    <value>Filename template must end with either %x or %y!</value>
   </data>
 </root>
