Add Reminder to download new update version
- Not every user is regularly checking in the About dialog if a new version is available.
- On every start of the app a check for a new version is done. In case a new version is available, the user is asked, if he wants to download it.

--- a/src/TumblThree/TumblThree.Applications/Properties/Resources.resx
+++ b/src/TumblThree/TumblThree.Applications/Properties/Resources.resx
@@ -377,4 +377,10 @@
   <data name="FilenameTemplateAppendTokenNotFound" xml:space="preserve">
     <value>Filename template must end with either %x or %y!</value>
   </data>
+  <data name="DownloadNewVersion" xml:space="preserve">
+    <value>Do you want to download the new version now?</value>
+  </data>
+  <data name="DownloadNewVersionTitle" xml:space="preserve">
+    <value>New version available</value>
+  </data>
 </root>
