Fix issue #130 Tumblr Search Offline
- If the privacy consent for Tumblr Search was missing, the redirect didn't work properly. It showed the blog as offline and didn't crawl.
- The redirect code is corrected to work with absolute and relative redirects. If the privacy consent is missing an error bar is shown.

--- a/src/TumblThree/TumblThree.Applications/Properties/Resources.resx
+++ b/src/TumblThree/TumblThree.Applications/Properties/Resources.resx
@@ -383,4 +383,7 @@
   <data name="DownloadNewVersionTitle" xml:space="preserve">
     <value>New version available</value>
   </data>
+  <data name="ConfirmationTumblrPrivacyConsentNeeded" xml:space="preserve">
+    <value>Tumblr Privacy Consent needs to be accepted in the settings!</value>
+  </data>
 </root>
