Refactor Global exception handling II
- The exception information has been extended with useful information.
- If the checkbox remains marked, the details are sent to our log endpoint.

--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.resx
@@ -1060,4 +1060,7 @@ The cookies for the privacy consent are saved and the process needs to be done o
   <data name="PrivacyConsent" xml:space="preserve">
     <value>Privacy consent</value>
   </data>
+  <data name="SendErrorDetailsMsg" xml:space="preserve">
+    <value>Send error details to TumblThreeApp</value>
+  </data>
 </root>
